--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ Chennai - 600096, Tamil Nadu, India.
                     <div class="container">
                         <div class="section-title text-center">
                             <h6 class="wow fadeInUp"><i class="fa-regular fa-arrow-left-long"></i>WHAT WE OFFER<i class="fa-regular fa-arrow-right-long"></i></h6>
-                            <h2 class="text-white splt-txt wow" data-splitting>Create The Building <br> You Want Here</h2>
+                            <h2 class="text-white splt-txt wow" data-splitting>Precision Automation <br>Begins Here</h2>
                         </div>
                         <div class="array-button">
                             <button class="array-prev"><i class="fa-regular fa-arrow-left-long"></i></button>
@@ -590,7 +590,7 @@ Chennai - 600096, Tamil Nadu, India.
                                             <h2 class="number">03</h2>
                                             <h3><a href="Installation-and-Commissioning.html">Installation & Commissioning</a></h3>
                                             <p>
-                                                End-to-end installation and commissioning for automation and industrial equipment.
+                                               End-to-end installation and commissioning of automation systems
 
                                             </p>
                                             <a href="Installation-and-Commissioning.html" class="link-btn">Explore More <i class="fa-solid fa-arrow-right"></i></a>
