--- a/PLC-Manufacturing.html
+++ b/PLC-Manufacturing.html
@@ -627,7 +627,7 @@ Chennai - 600096, Tamil Nadu, India.
                                         </div>
                                         <div class="footer-content">
                                             <p>
-                                               ALEB Automation delivers high-performance industrial <br>automation and electrical solutions across India. <br> We design, build, and support systems that help <br> factories work smarter, safer, and stronger — <br> today and for years to come.
+                                               ALEB Automation delivers high-performance industrial automation and electrical solutions across India. We design, build, and support systems that help factories work smarter, safer, and stronger — <br> today and for years to come.
                                             </p>
                                             <div class="social-icon d-flex align-items-center">
                                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
