--- a/index.html
+++ b/index.html
@@ -885,9 +885,9 @@ Chennai - 600096, Tamil Nadu, India.
 
                 <!-- Faq Section Start -->
                 <section class="faq-section fix section-padding section-bg-2 bg-cover" style="background-image: url('assets/img/faq/bg-shape.png');">
-                    <div class="track-shape float-bob-x">
+                    <!-- <div class="track-shape float-bob-x">
                         <img src="assets/img/track.png" alt="img">
-                    </div>
+                    </div> -->
                     <div class="container">
                         <div class="faq-wrapper">
                             <div class="row g-4">
@@ -1174,7 +1174,7 @@ Engineered For Your Success.</h2>
                                         </div>
                                         <div class="footer-content">
                                             <p>
-                                               ALEB Automation delivers high-performance industrial <br>automation and electrical solutions across India. <br> We design, build, and support systems that help <br> factories work smarter, safer, and stronger — <br> today and for years to come.
+                                               ALEB Automation delivers high-performance industrial automation and electrical solutions across India. We design, build, and support systems that help factories work smarter, safer, and stronger — <br> today and for years to come.
                                             </p>
                                             <div class="social-icon d-flex align-items-center">
                                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
