--- a/PLC-Programming.html
+++ b/PLC-Programming.html
@@ -149,9 +149,9 @@
                                 </button>
                             </div>
                         </div>
-                        <p class="text d-none d-xl-block">
+                        <!-- <p class="text d-none d-xl-block">
                             Nullam dignissim, ante scelerisque the  is euismod fermentum odio sem semper the is erat, a feugiat leo urna eget eros. Duis Aenean a imperdiet risus.
-                        </p>
+                        </p> -->
                         <div class="mobile-menu fix mb-3"></div>
                         <div class="offcanvas__contact">
                             <h4>Contact Info</h4>
@@ -161,7 +161,9 @@
                                         <i class="fal fa-map-marker-alt"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a target="_blank" href="#">Main Street, Melbourne, Australia</a>
+                                        <a target="_blank" href="#">Workafella – IIFL Towers, Level 7,
+143, MGR Main Road, Kandhanchavadi,
+Chennai – 600096, Tamil Nadu, India.</a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -169,7 +171,7 @@
                                         <i class="fal fa-envelope"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="mailto:info@example.com"><span class="mailto:info@example.com">info@example.com</span></a>
+                                        <a href="mailto:alebservices@gmail.com"><span class="mailto:alebservices@gmail.com">alebservices@gmail.com</span></a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -185,7 +187,7 @@
                                         <i class="far fa-phone"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="tel:+11002345909">+11002345909</a>
+                                        <a href="tel:+91 99405 49326">+91 99405 49326</a>
                                     </div>
                                 </li>
                             </ul>
