--- a/about.html
+++ b/about.html
@@ -441,7 +441,7 @@ Chennai - 600096, Tamil Nadu, India.
                         <div class="breadcrumb-sub-title">
                             <h1 class="wow fadeInUp" data-wow-delay=".3s">About Us</h1>
                         </div>
-                        <ul class="breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
+                        <!-- <ul class="breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
                             <li>
                                 <a href="index.html">
                                 Home
@@ -453,7 +453,7 @@ Chennai - 600096, Tamil Nadu, India.
                             <li>
                                 About Us
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div class="breadcrumb-image">
                         <img src="assets/img/breadcrumb-image.png" alt="img" class="float-bob-x">
