--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@ Chennai - 600096, Tamil Nadu, India.
                     <div class="container">
                         <div class="cta-banner-wrapper fix bg-cover" style="background-image: url('assets/img/cta-bg.jpg');">
                             <h2 class="splt-txt wow" data-splitting>
-                                From PLC programming to full-scale system integration, <br>  we help industries upgrade <b>automate, and optimize their operations with reliable,</b> <br> high-performance solutions.
+                               We deliver reliable, <b>high-<br>performance automation and <br>integration</b> solutions for industries.
                             </h2>
                             <div class="cta-img wow fadeInUp" data-wow-delay=".4s">
                                 <img src="assets/img/cta-img.png" alt="img">
