--- a/Installation-and-Commissioning.html
+++ b/Installation-and-Commissioning.html
@@ -162,9 +162,7 @@
                                         <i class="fal fa-map-marker-alt"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a target="_blank" href="#">Workafella – IIFL Towers, Level 7,
-143, MGR Main Road, Kandhanchavadi,
-Chennai – 600096, Tamil Nadu, India.</a>
+                                        <a target="_blank" href="#">No.20 A, 1st Floor, Kamaraj, 1st Street, Srinivasa Nagar padi, Chennai-600 050, India.</a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -172,7 +170,7 @@ Chennai – 600096, Tamil Nadu, India.</a>
                                         <i class="fal fa-envelope"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="mailto:alebservices@gmail.com"><span class="mailto:alebservices@gmail.com">alebservices@gmail.com</span></a>
+                                        <a href="mailto:info@alebautomation.com"><span class="mailto:info@alebautomation.com">info@alebautomation.com</span></a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -188,7 +186,7 @@ Chennai – 600096, Tamil Nadu, India.</a>
                                         <i class="far fa-phone"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="tel:+91 99405 49326">+91 99405 49326</a>
+                                        <a href="tel:+91 99440 23565">+91 99440 23565</a>
                                     </div>
                                 </li>
                             </ul>
@@ -616,10 +614,9 @@ Chennai - 600096, Tamil Nadu, India.
                                 </div>
                                 <div class="content">
                                     <p>Office location</p>
-                                    <h3>
+                                   <h3>
   
-                                        143, MGR Main Road, Kandhanchavadi,<br>
-                                        Chennai - 600096, Tamil Nadu, India.
+                                       No.20 A, 1st Floor, Kamaraj, 1st Street, <br>Srinivasa Nagar padi, Chennai-600 050,<br> India.
                                     </h3>
                                 </div>
                             </div>
@@ -630,7 +627,7 @@ Chennai - 600096, Tamil Nadu, India.
                                 <div class="content">
                                     <p>send email</p>
                                     <h3>
-                                        <a href="mailto:alebservices@gmail.com">alebservices@gmail.com</a>
+                                        <a href="mailto:info@alebautomation.com">info@alebautomation.com</a>
                                     </h3>
                                 </div>
                             </div>
@@ -641,7 +638,7 @@ Chennai - 600096, Tamil Nadu, India.
                                 <div class="content">
                                     <p>call emergency</p>
                                     <h3>
-                                        <a href="tel:+91 99405 49326">+91 99405 49326</a>
+                                        <a href="tel:+91 99440 23565">+91 99440 23565</a>
                                     </h3>
                                 </div>
                             </div>
