--- a/contact.html
+++ b/contact.html
@@ -163,9 +163,7 @@
                                         <i class="fal fa-map-marker-alt"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a target="_blank" href="#">Workafella – IIFL Towers, Level 7,
-143, MGR Main Road, Kandhanchavadi,
-Chennai – 600096, Tamil Nadu, India.</a>
+                                        <a target="_blank" href="#">No.20 A, 1st Floor, Kamaraj, 1st Street, Srinivasa Nagar padi, Chennai-600 050, India.</a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -173,7 +171,7 @@ Chennai – 600096, Tamil Nadu, India.</a>
                                         <i class="fal fa-envelope"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="mailto:alebservices@gmail.com"><span class="mailto:alebservices@gmail.com">alebservices@gmail.com</span></a>
+                                        <a href="mailto:info@alebautomation.com"><span class="mailto:info@alebautomation.com">info@alebautomation.com</span></a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -189,7 +187,7 @@ Chennai – 600096, Tamil Nadu, India.</a>
                                         <i class="far fa-phone"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="tel:+91 99405 49326">+91 99405 49326</a>
+                                        <a href="tel:+91 99440 23565">+91 99440 23565</a>
                                     </div>
                                 </li>
                             </ul>
@@ -481,8 +479,7 @@ Chennai - 600096, Tamil Nadu, India.
                             <div class="content">
                                 <h3>Our Address</h3>
                                 <p>
-                                    143, MGR Main Road, Kandhanchavadi,
-                                    Chennai - 600096, Tamil Nadu, India.
+                                    No.20 A, 1st Floor, Kamaraj, 1st Street, Srinivasa Nagar padi, Chennai-600 050, India.
                                 </p>
                             </div>
                         </div>
@@ -495,8 +492,8 @@ Chennai - 600096, Tamil Nadu, India.
                             <div class="content">
                                 <h3>Email Address</h3>
                                 <p>
-                                    Mobile :<a href="tel:+91 99405 49326">+91 99405 49326</a> <br>
-                                    Email :<br><a href="mailto:alebservices@gmail.com">alebservices@gmail.com</a>
+                                    Mobile :<a href="tel:+91 99440 23565">+91 99440 23565</a> <br>
+                                    Email :<br><a href="mailto:info@alebautomation.com">info@alebautomation.com</a>
                                 </p>
                             </div>
                         </div>
@@ -631,10 +628,9 @@ Chennai - 600096, Tamil Nadu, India.
                                 </div>
                                 <div class="content">
                                     <p>Office location</p>
-                                    <h3>
+                                   <h3>
   
-                                        143, MGR Main Road, Kandhanchavadi,<br>
-                                        Chennai - 600096, Tamil Nadu, India.
+                                       No.20 A, 1st Floor, Kamaraj, 1st Street, <br>Srinivasa Nagar padi, Chennai-600 050,<br> India.
                                     </h3>
                                 </div>
                             </div>
@@ -645,7 +641,7 @@ Chennai - 600096, Tamil Nadu, India.
                                 <div class="content">
                                     <p>send email</p>
                                     <h3>
-                                        <a href="mailto:alebservices@gmail.com">alebservices@gmail.com</a>
+                                        <a href="mailto:info@alebautomation.com">info@alebautomation.com</a>
                                     </h3>
                                 </div>
                             </div>
@@ -656,7 +652,7 @@ Chennai - 600096, Tamil Nadu, India.
                                 <div class="content">
                                     <p>call emergency</p>
                                     <h3>
-                                        <a href="tel:+91 99405 49326">+91 99405 49326</a>
+                                        <a href="tel:+91 99440 23565">+91 99440 23565</a>
                                     </h3>
                                 </div>
                             </div>
