--- a/index.html
+++ b/index.html
@@ -160,9 +160,7 @@
                                         <i class="fal fa-map-marker-alt"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a target="_blank" href="#">Workafella – IIFL Towers, Level 7,
-143, MGR Main Road, Kandhanchavadi,
-Chennai – 600096, Tamil Nadu, India.</a>
+                                        <a target="_blank" href="#">No.20 A, 1st Floor, Kamaraj, 1st Street, Srinivasa Nagar padi, Chennai-600 050, India.</a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -170,7 +168,7 @@ Chennai – 600096, Tamil Nadu, India.</a>
                                         <i class="fal fa-envelope"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="mailto:alebservices@gmail.com"><span class="mailto:alebservices@gmail.com">alebservices@gmail.com</span></a>
+                                        <a href="mailto:info@alebautomation.com"><span class="mailto:info@alebautomation.com">info@alebautomation.com</span></a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -186,7 +184,7 @@ Chennai – 600096, Tamil Nadu, India.</a>
                                         <i class="far fa-phone"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="tel:+91 99405 49326">+91 99405 49326</a>
+                                        <a href="tel:+91 99440 23565">+91 99440 23565</a>
                                     </div>
                                 </li>
                             </ul>
@@ -712,9 +710,9 @@ Chennai - 600096, Tamil Nadu, India.
                     <!-- <div class="shape-1 float-bob-x">
                         <img src="assets/img/skills/shape-1.png" alt="img">
                     </div> -->
-                    <div class="shape-2 float-bob-y">
+                    <!-- <div class="shape-2 float-bob-y">
                         <img src="assets/img/skills/shape-2.png" alt="img">
-                    </div>
+                    </div> -->
                     <div class="container">
                         <div class="skills-wrapper">
                             <div class="row g-4">
@@ -1097,7 +1095,7 @@ Engineered For Your Success.</h2>
                                             </div>
                                             <div class="content">
                                                 <span>call emergency</span>
-                                                <h4><a href="tel:+91 99405 49326">+91 99405 49326</a></h4>
+                                                <h4><a href="tel:+91 99440 23565">+91 99440 23565</a></h4>
                                             </div>
                                         </div>
                                     </div>
@@ -1165,8 +1163,7 @@ Engineered For Your Success.</h2>
                                     <p>Office location</p>
                                     <h3>
   
-                                        143, MGR Main Road, Kandhanchavadi,<br>
-                                        Chennai - 600096, Tamil Nadu, India.
+                                       No.20 A, 1st Floor, Kamaraj, 1st Street, <br>Srinivasa Nagar padi, Chennai-600 050,<br> India.
                                     </h3>
                                 </div>
                             </div>
@@ -1177,7 +1174,7 @@ Engineered For Your Success.</h2>
                                 <div class="content">
                                     <p>send email</p>
                                     <h3>
-                                        <a href="mailto:alebservices@gmail.com">alebservices@gmail.com</a>
+                                        <a href="mailto:info@alebautomation.com">info@alebautomation.com</a>
                                     </h3>
                                 </div>
                             </div>
@@ -1188,7 +1185,7 @@ Engineered For Your Success.</h2>
                                 <div class="content">
                                     <p>call emergency</p>
                                     <h3>
-                                        <a href="tel:+91 99405 49326">+91 99405 49326</a>
+                                        <a href="tel:+91 99440 23565">+91 99440 23565</a>
                                     </h3>
                                 </div>
                             </div>
