--- a/contact.html
+++ b/contact.html
@@ -380,7 +380,7 @@ Chennai - 600096, Tamil Nadu, India.
                                         </li>
                                         <li>
                                             <a href="project.html">
-                                                Projects
+                                               Careers
                                                 
                                             </a>
                                             <!-- <ul class="submenu">
@@ -493,7 +493,7 @@ Chennai - 600096, Tamil Nadu, India.
                                 <h3>Email Address</h3>
                                 <p>
                                     Mobile :<a href="tel:+91 99440 23565">+91 99440 23565</a> <br>
-                                    Email :<br><a href="mailto:info@alebautomation.com">info@alebautomation.com</a>
+                                    Email :<a href="mailto:info@alebautomation.com">info@alebautomation.com</a>
                                 </p>
                             </div>
                         </div>
