careers page add

--- a/Maintenance-and-Support.html
+++ b/Maintenance-and-Support.html
@@ -378,7 +378,7 @@ Chennai - 600096, Tamil Nadu, India.
                                            
                                         </li>
                                         <li>
-                                            <a href="project.html">
+                                            <a href="carrers.html">
                                                Careers
                                                 
                                             </a> 
@@ -697,7 +697,7 @@ Chennai - 600096, Tamil Nadu, India.
                                                 </a>
                                             </li>
                                               <li>
-                                                <a href="project.html">
+                                                <a href="carrers.html">
                                                     <i class="fa-solid fa-chevrons-right"></i>
                                                     Projects
                                                 </a>
