--- a/project.html
+++ b/project.html
@@ -377,7 +377,7 @@ Chennai - 600096, Tamil Nadu, India.
                                            
                                         </li>
                                         <li>
-                                            <a href="project.html">
+                                            <a href="carrers.html">
                                                 Careers
                                                 
                                             </a> 
@@ -469,10 +469,12 @@ Chennai - 600096, Tamil Nadu, India.
                                 <img src="assets/img/project/09.jpg" alt="img">
                             </div>
                             <div class="project-content">
-                                <h3><a href="project-details.html">General Construction</a></h3>
+                                <h3><a href="project-details.html">PLC – Programmer </a></h3>
                                 <p>
-                                    There are many variations of a passages of Lorem Ipsum available,
+                                    Minimum 1-year to 5-year experienced candidates can apply.
                                 </p>
+                                <p>On hand programming experience mandatory.
+</p>
                             </div>
                             <div class="shape-img">
                                 <img src="assets/img/project/shape.png" alt="img">
@@ -486,9 +488,9 @@ Chennai - 600096, Tamil Nadu, India.
                                 <img src="assets/img/project/10.jpg" alt="img">
                             </div>
                             <div class="project-content">
-                                <h3><a href="project-details.html">Architecture & Building</a></h3>
+                                <h3><a href="project-details.html">Mechanical Engineer</a></h3>
                                 <p>
-                                    There are many variations of a passages of Lorem Ipsum available,
+                                    Minimum 1-year to 5-year experienced candidates can apply.
                                 </p>
                             </div>
                             <div class="shape-img">
@@ -503,9 +505,10 @@ Chennai - 600096, Tamil Nadu, India.
                                 <img src="assets/img/project/11.jpg" alt="img">
                             </div>
                             <div class="project-content">
-                                <h3><a href="project-details.html">Interior Design</a></h3>
+                                <h3><a href="project-details.html">Mechanical Design Engineer</a></h3>
                                 <p>
-                                    There are many variations of a passages of Lorem Ipsum available,
+                                    Minimum 1-year to 5-year experienced candidates can apply
+
                                 </p>
                             </div>
                             <div class="shape-img">
@@ -520,10 +523,13 @@ Chennai - 600096, Tamil Nadu, India.
                                 <img src="assets/img/project/12.jpg" alt="img">
                             </div>
                             <div class="project-content">
-                                <h3><a href="project-details.html">Combine Electricity</a></h3>
+                                <h3><a href="project-details.html">We welcome Freshers (EEE & E&I) (B.E., Diploma & ITI)
+</a></h3>
                                 <p>
-                                    There are many variations of a passages of Lorem Ipsum available,
+                                    Electrical and Electronics Engineering & Instrumentation & Controlee Engineering 
                                 </p>
+                                <p>Passionate to work with an aggressive growing startup with the ready to do mindset.</p>
+                                <p>Must have passed out less than 1 year</p>
                             </div>
                             <div class="shape-img">
                                 <img src="assets/img/project/shape.png" alt="img">
@@ -748,7 +754,7 @@ Chennai - 600096, Tamil Nadu, India.
                                                 </a>
                                             </li>
                                               <li>
-                                                <a href="project.html">
+                                                <a href="carrers.html">
                                                     <i class="fa-solid fa-chevrons-right"></i>
                                                     Projects
                                                 </a>
