--- a/PLC-Manufacturing.html
+++ b/PLC-Manufacturing.html
@@ -378,7 +378,7 @@ Chennai - 600096, Tamil Nadu, India.
                                            
                                         </li>
                                         <li>
-                                            <a href="project.html">
+                                            <a href="carrers.html">
                                                 Careers
                                                 
                                             </a> 
@@ -693,7 +693,7 @@ Chennai - 600096, Tamil Nadu, India.
                                                 </a>
                                             </li>
                                               <li>
-                                                <a href="project.html">
+                                                <a href="carrers.html">
                                                     <i class="fa-solid fa-chevrons-right"></i>
                                                     Projects
                                                 </a>
