--- a/PLC-Programming.html
+++ b/PLC-Programming.html
@@ -377,7 +377,7 @@ Chennai - 600096, Tamil Nadu, India.
                                            
                                         </li>
                                         <li>
-                                            <a href="project.html">
+                                            <a href="carrers.html">
                                                Careers
                                                 
                                             </a> 
@@ -735,7 +735,7 @@ Chennai - 600096, Tamil Nadu, India.
                                                 </a>
                                             </li>
                                               <li>
-                                                <a href="project.html">
+                                                <a href="carrers.html">
                                                     <i class="fa-solid fa-chevrons-right"></i>
                                                     Projects
                                                 </a>
