--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ Chennai - 600096, Tamil Nadu, India.
                                            
                                         </li>
                                         <li>
-                                            <a href="project.html">
+                                            <a href="carrers.html">
                                                 Careers
                                                 
                                             </a> 
@@ -1238,7 +1238,7 @@ Engineered For Your Success.</h2>
                                                 </a>
                                             </li>
                                               <li>
-                                                <a href="project.html">
+                                                <a href="carrers.html">
                                                     <i class="fa-solid fa-chevrons-right"></i>
                                                     Projects
                                                 </a>
