--- a/service.html
+++ b/service.html
@@ -379,7 +379,7 @@ Chennai - 600096, Tamil Nadu, India.
                                            
                                         </li>
                                         <li>
-                                            <a href="project.html">
+                                            <a href="carrers.html">
                                                 Careers 
                                                 
                                             </a> 
@@ -724,7 +724,7 @@ Comprehensive maintenance and rapid support to prevent breakdowns and ensure rel
                                                 </a>
                                             </li>
                                               <li>
-                                                <a href="project.html">
+                                                <a href="carrers.html">
                                                     <i class="fa-solid fa-chevrons-right"></i>
                                                     Projects
                                                 </a>
