--- a/about.html
+++ b/about.html
@@ -491,7 +491,7 @@ Chennai - 600096, Tamil Nadu, India.
                             <div class="about-content">
                                 <div class="section-title">
                                     <!-- <h6 class="wow fadeInUp"><i class="fa-regular fa-arrow-left-long"></i>1976 Building conpany<i class="fa-regular fa-arrow-right-long"></i></h6> -->
-                                    <h2 class="splt-txt wow" data-splitting>Create The Building You Want Here</h2>
+                                    <h2 class="splt-txt wow" data-splitting>Your Partner In Industrial Excellence</h2>
                                 </div>
                                 <p class="mt-3 mt-md-0 wow fadeInUp" data-wow-delay=".4s">
                                     ALEB Automation is an engineering-driven automation company based in Chennai, built by people who understand the pulse of real factory floors. Since 2017, we’ve been designing, manufacturing, installing, and supporting automation systems for industries that cannot afford uncertainty from tire plants to food manufacturing to complex process environments.
