--- a/service.html
+++ b/service.html
@@ -465,7 +465,7 @@ Chennai - 600096, Tamil Nadu, India.
             <div class="container">
                 <div class="section-title text-center">
                     <h6 class="wow fadeInUp"><i class="fa-regular fa-arrow-left-long"></i>WHAT WE OFFER<i class="fa-regular fa-arrow-right-long"></i></h6>
-                    <h2 class="splt-txt wow" data-splitting>Create The Building <br> You Want Here</h2>
+                    <h2 class="splt-txt wow" data-splitting>Precision Automation <br>Begins Here</h2>
                 </div>
                 <div class="row">
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".2s">
